# kursovaya

./: CMakeLists.txt  LICENSE  README.md  buyers.txt  compile_translations.sh  copy_translations.sh  resources.qrc  test_buyers.txt
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/controllers/: buyercontroller.cpp  buyercontroller.h
src/dialogs/: aboutdialog.cpp  aboutdialog.h  studentdialog.cpp  studentdialog.h
src/models/: buyermodel.cpp  buyermodel.h  searchhighlightproxy.cpp  searchhighlightproxy.h
src/views/: buyerdialog.cpp  buyerdialog.h  buyerview.cpp  buyerview.h  mainwindow.cpp
translations/: buyerdatabase_en.ts  buyerdatabase_ru.ts  studentdatabase_en.ts  studentdatabase_ru.ts
